--- a/main.css
+++ b/main.css
@@ -1,102 +1,102 @@
 body {
-	font-family: Roboto;
+	font-family: 'Roboto', sans-serif;
 }
 nav.container {
 	position: fixed;
-	height:	60px;
-	background-color: #d3d3d3;
+	height:	50px;
+	background-color: #e8e8ee;
 	border-bottom: 1px solid #dddddd;
 	width: 100%;
 	top: 0;
 	left: 0;
 	right: 0;
+	vertical-align: middle;
 }
-nav.container h3 {
+#logo {
 	display: inline-block; 
-	font-size: 25px;
-	position: absolute;
-	top: -10px;
+	font-size: 15px;
+	margin-top: -10px;
+	position: relative;
+	left: -5%;
+	vertical-align: middle;
 }
 nav.container ul {
 	display: inline-block;
-	list-style: none;
+	text-align: right;
+	font-size: 20px;
 	position: relative;
-	left: 67%;
+	left: 55%;
 }
 nav.container li {
 	display: inline-block;
 	text-align: right;
-	font-size: 20px;
-	color: purple;
-}
-nav.container li::after {
-	content: "|";
-  	margin-left: 10px;
+	margin-right: 15px;
+	color: purple; 
 }
 .container {
 	padding-left: 60px;
 	padding-right: 60px;
 } 
 form {
-	padding-top: 80px;
-	margin-left: 30px;
+	padding-top: 60px;
+	margin-left: 33px;
 }
-input {
-	width: 550px;
-	height: 30px;
+input#mag {
+	display: inline-block;
+	height: 25px;
+	border: 1px solid #e8e8ee;
 	border-radius: 3px;
+	vertical-align: middle;
 }
-h4 {
+label {
+	display: block;
+	font-weight: 700;
 	margin-bottom: 5px;
 }
-.mag {
-	width: 50px;
-	height: 35px;
-	position: absolute;
-	top: 133px;
-	margin-left: 10px;
-	border: 1px solid #d3d3d3;
+input#search-input {
+	width: 400px;
+	height: 25px;
 	border-radius: 3px;
+	padding-left: 5px;
+	font-family: 'Roboto', sans-serif;
+	font-size: 18px;
+	margin-bottom: 20px;
+}
+ a {
+	color: inherit;
+	text-decoration: inherit; 
 }
 .page-nav {
 	display: inline-block;
-	max-width: 450px;
-	text-align: center;
-	padding: 0;
-	margin-left: 50px;
-	margin-top: 40px;
-	margin-bottom: 20px;
+	margin-left: 53px;
 }
-div.page-nav ul {
-	display: inline-block;
-	width: 450px;
-}
-div.page-nav li {
-	font-size: 16px;
-	display: inline-block;
-	border: 1px solid #dddddd;
-	border-radius: 3px;
-	padding: 15px 40px 15px 40px;
-	margin: 0;
-}
-.nav-button {
-	position: relative;
-	width: 25%;
-	text-align: center;
-}
-section ul {
-	display: inline-block;
+.page-nav ul {
 	list-style: none;
-	margin-left: 30px;
-}
-section li {
 	display: inline-block;
 }
-.det {
-	color: gray;
-	margin-left: 20px;
-	margin-right: 10px;
+.page-nav li {
+	display: inline-block;
+	border: 1px solid #e8e8ee;
+	border-radius: 3px;
+	margin-right: -5px;
+	padding: 10px 20px;
 }
-.bot-nav {
-	font-size: 0;
+.listings {
+	display: block;
+	margin-left: 53px;
+	margin-top: 25px;
+}
+.listings ul {
+	list-style: none;
+}
+.listings li {
+	display: block;
+	margin-top: 17px;
+	color: gray;
+}
+.listings  a {
+	color: blue;
+	margin-left: 15px;
+	margin-right: 15px;
+	font-weight: 700;
 }
